--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
+sudo: false
+branches:
+  only:
+    - master
 language: ruby
 rvm:
+  - 1.9.3
   - 2.1
   - 2.2
-  - 1.9.3
+script: bundle exec rspec
